--- a/templates/property/google_maps.html.twig
+++ b/templates/property/google_maps.html.twig
@@ -15,7 +15,7 @@
             });
             var infowindow = new google.maps.InfoWindow();
             var service = new google.maps.places.PlacesService(map);
-          var image = '/images/homepointer.png';
+          var image = '/images/map_pin.png';
             var marker = new google.maps.Marker({
                 map: map,
                 position: posLatLng,
@@ -47,7 +47,7 @@
                     <h3 style="text-align:center;">Property Google map</h3>
                     <div id="map"></div>
                     <script async defer
-                    src="https://maps.googleapis.com/maps/api/js?key= AIzaSyAEoEf7uVL9H2QJItVS6hLmMs46ta9ohbE&libraries=places&callback=initMap">
+                    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEoEf7uVL9H2QJItVS6hLmMs46ta9ohbE&libraries=places&callback=initMap">
                     </script>
                 </div>
             </div>
