--- a/templates/property/google_maps_list.html.twig
+++ b/templates/property/google_maps_list.html.twig
@@ -55,7 +55,7 @@
                     <h3 style="text-align:center;">Property Google map</h3>
                     <div id="map"></div>
                     <script async defer
-                    src="https://maps.googleapis.com/maps/api/js?key= AIzaSyAEoEf7uVL9H2QJItVS6hLmMs46ta9ohbE&libraries=places&callback=initMap">
+                    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEoEf7uVL9H2QJItVS6hLmMs46ta9ohbE&libraries=places&callback=initMap">
                     </script>
                 </div>
             </div>
