--- a/templates/login_success.html.twig
+++ b/templates/login_success.html.twig
@@ -8,11 +8,11 @@
         <body>
             <div class="container">
                 <div class="well">
-                    <h1 style="text-align:center;" >Login successful</h1>
+                    <h1 style="text-align:center;" >Login Successful</h1>
                     
                     <br>
-                    <p style="text-align:center;" ><a href="/property/list">property List</a></p>
-                    <p style="text-align:center;" ><a href="/property/add">click to add property</a></p>
+                    <p style="text-align:center;" ><a href="/property/list">Property List</a></p>
+                    <p style="text-align:center;" ><a href="/property/add">Add Property</a></p>
                 </div>
             </div>
         </body>
