--- a/templates/master.html.twig
+++ b/templates/master.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html>
-    
+
     <head>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <meta charset="UTF-8">
@@ -11,45 +11,56 @@
         <link href="/css/bootstrap.min.css" type="text/css" rel="stylesheet" >
         <link href="/css/stylesheet.css" type="text/css" rel="stylesheet">
         <link rel="shortcut icon" href="/images/logo_icon.ico">
-    {% block headextra %} {% endblock %}
+        {% block headextra %} {% endblock %}
     </head>
+
     <body>
-            <div class="navbar-default">
-                <div class="container">
-                    <div class="navbar-header nabar-left">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-bar-links">
-                            <span class="sr-only">Toggle navigation</span> 
-                            <span class="icon-bar"></span> 
-                            <span class="icon-bar"></span> 
-                        </button>
-                        <a class="navbar-brand" href="/">
-                            <img src="/images/logo.png" width="140" style="margin-top:-10px">
-                        </a> 
-                    </div>
 
-                    <div class="collapse navbar-collapse" id="nav-bar-links">
-                        {#=========================
-                                       <form class="navbar-form navbar-right" style="border: none" onSubmit="return Validate()" method="post" action="">
-                                           
-                                           <div class="form-group">
-                                               <input type="text" name="username" class="form-control" placeholder="User Name">
-                                               <input type="password" name="pass" class="form-control" placeholder="Password">
-                                               <input type="submit" value="login" name="login" class="btn btn-default">
-                                           </div>
-                                       </form>
-                       ================================== #}
-                        <ul class="nav navbar-nav navbar-right">
-                            <li><a href="/login">Login</a></li>
-                            <li><a href="/register">Register</a></li>
-                            <li><a href="/logout">logout</a></li>
-                            <li><a href="/">Home</a></li>
 
-                        </ul>
-                    </div>
+        <div class="navbar-default">
+            <div class="container">
+                <div class="navbar-header nabar-left">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-bar-links">
+                        <span class="sr-only">Toggle navigation</span> 
+                        <span class="icon-bar"></span> 
+                        <span class="icon-bar"></span> 
+                    </button>
+                    <a class="navbar-brand" href="/">
+                        <img src="/images/logo.png" width="140" style="margin-top:-10px">
+                    </a> 
+                </div>
+
+                <div class="collapse navbar-collapse" id="nav-bar-links">
+                    {% if userSession %}
+
+                        <div class="nav navbar-nav navbar-right">
+
+                            <ul class="nav navbar-nav navbar-right">
+                                <li><span class="navbar-text navbar-right" href="">Welcom: &nbsp;{{ userSession.name }}</a> &nbsp;</span>
+                                <li><a href='/property/list'>Property List</a></li>
+                                <li><a href='/property/add'>Add Property</a></li>
+                                <li><a href='/logout'>Logout</a></li>
+                            </ul>
+                        </div>    
+
+                    {% else %}
+
+                        <div class="nav navbar-nav navbar-right">
+                            <ul class="nav navbar-nav navbar-right">
+                                <li><span class="navbar-text navbar-right" href="">You're not logged in. You may  &nbsp;</span></li>
+                                <li><a href='/login'>Login</a></li>
+                                <li><span class="navbar-text">or</span></li>
+                                <li><a href='/register'>Register</a></li>
+                            </ul>
+                        </div>    
+
+                    {% endif %}
+
                 </div>
             </div>
+        </div>
 
-      {#=========================   ================================== #}
+        {#=========================   ================================== #}
 
         <div id="centeredContent">
         {% block content %}{% endblock %}
@@ -57,6 +68,6 @@
     <footer>
         <p class="text-center col-md-12"r style="padding-top: 10px">
             <small>© Copyright On Q8, 2017. All rights reserved.</small></p>
-</footer>
-    </body>
+    </footer>
+</body>
 </html>
