--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -15,7 +15,7 @@
 	color:white;
 }
 .navbar-default .navbar-nav>li>a{
-	color:white;
+	color:#0089b2;
 }
 .navbar-default .navbar-nav .open .dropdown-menu>li>a{
 	color: white;
