--- a/templates/Index.html.twig
+++ b/templates/Index.html.twig
@@ -27,16 +27,10 @@
                         <p style="opacity:">Find the perfect home for you and your family. Meet properties owners who are waiting for you, or you search for them. With millions of people subscribed to our service, we at rentalmtl are trying our best to put smiles on everyone's face.</p>
                     </div>
                     <div class="col-md-4 col-sm-6">
-
-                        <h3>Get Started!</h3>
-                        <ul style="list-style-type:square">
-                            <li><a href="#">Your property</a></li>
-                            <li><a href="#">Post an property</a></li>
-                            <li><a href="#">Account Settings</a></li>
-                            <li><a href="#">update your profile!</a></li>
-                        </ul>
                         <h3>What is OnQ8.com?</h3>
                         <p>OnQ8.com is a place where Buyer and Seller create a trusting relationship.</p>
+                        <h3>Contact Us</h3>
+                            <p><small> <strong>OnQ8.com</strong><br> Tel: 514-619-6420</small> </p>
                     </div>
                     <div class="col-md-4 col-sm-12" >
                         <h3>How does it work?</h3>
