--- a/templates/master.html.twig
+++ b/templates/master.html.twig
@@ -67,7 +67,7 @@
     </div>
     <footer>
         <p class="text-center col-md-12"r style="padding-top: 10px">
-            <small>© Copyright On Q8, 2017. All rights reserved.</small></p>
+            <small>ONQ8.com is a project of IPD-10's © 2017, All rights reserved.</small></p>
     </footer>
 </body>
 </html>
