--- a/templates/property/property_addedit.html.twig
+++ b/templates/property/property_addedit.html.twig
@@ -102,7 +102,7 @@
                             <label class="col-md-3 control-label">Description:</label>
                             <div class="col-md-9">
                             <textarea rows="4" cols="50" name="description"
-                            value="{{v.description}}"class="form-control"> Enter text here...</textarea>
+                            value="{{v.description}}"class="form-control"></textarea>
                             </div>
                         </div>
 {#=============  Image:   ==================== #}
