--- a/templates/property/google_maps.html.twig
+++ b/templates/property/google_maps.html.twig
@@ -1,4 +1,4 @@
-% extends "master.html.twig" %}
+{% extends "master.html.twig" %}
 
 {% block title %}
     Google Maps
@@ -47,7 +47,7 @@
                     <h3 style="text-align:center;">Property Google map</h3>
                     <div id="map"></div>
                     <script async defer
-                    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEoEf7uVL9H2QJItVS6hLmMs46ta9ohbE&libraries=places&callback=initMap">
+                    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBi_RmcXLnf2aoOIGzGGVPdrnaWQD2jrWs&libraries=places&callback=initMap">
                     </script>
                 </div>
             </div>
