--- a/templates/indexnew.html.twig
+++ b/templates/indexnew.html.twig
@@ -2,6 +2,47 @@
 
 
 {% block title %}home{% endblock %}
+{% block headextra %}
+    {% for p in list %}
+        <script>
+            var map;
+            var infowindow;
+            function initMap() {
+                var pyrmont = {lat:{{p.latitude}}, lng:{{p.longitude}}};
+                map = new google.maps.Map(document.getElementById('map'), {
+                    center: pyrmont,
+                    zoom: 15
+                });
+                infowindow = new google.maps.InfoWindow();
+                var service = new google.maps.places.PlacesService(map);
+                service.nearbySearch({
+                    location: pyrmont,
+                    radius: 500,
+                    type: ['store']
+                }, callback);
+            }
+            function callback(results, status) {
+                if (status === google.maps.places.PlacesServiceStatus.OK) {
+                    for (var i = 0; i < results.length; i++) {
+                        createMarker(results[i]);
+                    }
+                }
+            }
+            function createMarker(place) {
+                var placeLoc = place.geometry.location;
+                var marker = new google.maps.Marker({
+                    map: map,
+                    position: place.geometry.location
+                });
+                google.maps.event.addListener(marker, 'click', function () {
+                    infowindow.setContent(place.name);
+                    infowindow.open(map, this);
+                });
+            }
+        </script>
+    {% endfor %}
+
+{%endblock %}
 
 
 {% block content %}
@@ -20,11 +61,20 @@
                     </div>
                 </div>
             </div>
+            
+            <div class="well">
+                    <h3 style="text-align:center;">Property Google map</h3>
+                    <div id="map"></div>
+                    <script async defer
+                    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEoEf7uVL9H2QJItVS6hLmMs46ta9ohbE&libraries=places&callback=initMap">
+                    </script>
+                </div>
+            
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-sm-6">
                         <h3>Welcome!</h3>
-                        <p style="opacity:">Find the perfect home for you and your family. Meet properties owners who are waiting for you, or you search for them. With millions of people subscribed to our service, we at rentalmtl are trying our best to put smiles on everyone's face.</p>
+                        <p style="opacity:">Find the perfect home for you and your family. Meet properties owners who are waiting for you, or you search for them. With millions of people subscribed to our service, we at onQ8.com are trying our best to put smiles on everyone's face.</p>
                     </div>
                     <div class="col-md-4 col-sm-6">
                        <h3>Contact Us</h3>
